@@ -1,3 +1,7 @@
+2008-08-02  Brian Bidulock  <bidulock@openss7.org>
+
+	* doc/papers/Makefile.am: no variables in EXTRA_DIST
+
 2008-07-27  Brian Bidulock  <bidulock@openss7.org>
 
 	* AUTHORS: updates for release
